removing pause and restart buttons from UI, adding pause as keypress for now, adding simple start screen, checkout counter moved to prevent clipping

--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,45 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  /* font-family: 'Roboto Mono', monospace; */
   font-family: 'Press Start 2P', cursive;
   overflow: hidden;
+}
+
+#start-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100vh;
+}
+#game-title {
+  font-size: 12vh;
+  animation: blinker 1s linear infinite;
+}
+
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+    -webkit-transform: scale(0.99) ;
+    -moz-transform: ;
+    -o-transform: ;  }
+}
+#start-button {
+  text-align: center;
+  display: inline-block;
+  margin: 5px;
+  font-weight: bold;
+  padding: 10px 0 10px 10px;
+  background-color: lightgray;
+  text-shadow: -1px -1px black, 1px 1px white;
+  color: gray;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -o-border-radius: 7px;
+  border-radius: 7px;
+  box-shadow: 0 0.2em gray;
+  cursor: pointer;
 }
 
 #main-game-container {
@@ -16,25 +52,22 @@
 
 #top-panel {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   /* background-color: rgb(236, 236, 198); */
-  background-color: purple;
-  color: white;
-  border: 6px solid white;
+  background-color: rgb(244, 198, 141);
+  color: rgb(178, 107, 198);
   border-top: none;
-  height: 15vh
+  height: 16vh;
 }
-#top-panel > *{
-    width: 25%;
+#top-panel > * {
+  width: 30%;
 }
-
 
 #pending-orders-display {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  /* border-right: 6px solid purple; */
-  border-right: 6px solid white;
+  padding-left: 3%;
 }
 
 .order-container {
@@ -42,16 +75,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* border-right: 6px solid purple; */
-  border-right: 6px solid white;
   height: 100%;
   width: 25%;
   padding: 3%;
 }
 
-.order-container:last-child{
-    border-right: none;
-}
 .order-container img {
   flex-grow: 1;
   width: 100%;
@@ -60,46 +88,37 @@
 
 #inventory-container {
   display: flex;
-  /* border-right: 6px solid purple; */
-  border-right: 6px solid white;
-  /* color: purple; */
   justify-content: center;
   align-items: center;
 }
 
-#inventory-container h2{
-    width: 50%;
+#inventory-container h2 {
+  width: 50%;
 }
 
 #inventory-list {
-    width: 50%
+  width: 50%;
 }
-#inventory-list img{
-    width: 50%;
-    padding: 10%
+#inventory-list img {
+  width: 50%;
+  padding: 10%;
 }
 #info-container {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  /* color: purple; */
-  /* border-right: 6px solid purple; */
-  border-right: 6px solid white;
-
 }
 
 #menu-buttons {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  display: none;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-#menu-buttons button{
-  padding: 5% 10%;
+#menu-buttons button {
+  padding: 4% 6%;
   border-radius: 5px;
-  /* background-color: purple; */
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 700;
-  /* color: rgb(236, 236, 198); */
   color: purple;
 }
